<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LabFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_lab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_green_yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_lab_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="БТПИ №3"
                android:textColor="@color/text_black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/button_more"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/outline_more_vert_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_status"
                android:layout_width="38dp"
                android:layout_height="34dp"
                android:layout_marginEnd="24dp"
                android:src="@drawable/outline_close_24"
                app:layout_constraintEnd_toStartOf="@+id/button_more"
                app:layout_constraintTop_toTopOf="@+id/button_more" />

            <TextView
                android:id="@+id/text_lab_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_not_complete"
                android:textSize="8sp"
                app:layout_constraintBottom_toBottomOf="@+id/button_more"
                app:layout_constraintEnd_toEndOf="@+id/image_status"
                app:layout_constraintStart_toStartOf="@+id/image_status"
                app:layout_constraintTop_toBottomOf="@+id/image_status" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginBottom="16dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_lab"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/subject"
                    android:textColor="@color/text_black"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent" />

                <EditText
                    android:id="@+id/edit_text_subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:hint="@string/phisics"
                    android:minHeight="48dp"
                    android:textCursorDrawable="@null"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="@+id/text_subject"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/text_subject"
                    app:layout_constraintTop_toTopOf="@+id/text_subject" />

                <TextView
                    android:id="@+id/text_lab_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/lab_number"
                    android:textColor="@color/text_black"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="@+id/text_subject"
                    app:layout_constraintTop_toBottomOf="@+id/text_subject" />

                <EditText
                    android:id="@+id/edit_text_lab_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:hint="@string/_3"
                    android:inputType="number"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:textCursorDrawable="@null"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="@+id/text_lab_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/text_lab_number"
                    app:layout_constraintTop_toTopOf="@+id/text_lab_number" />

                <TextView
                    android:id="@+id/text_lab_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/question"
                    android:textColor="@color/text_black"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="@+id/text_lab_number"
                    app:layout_constraintTop_toBottomOf="@+id/text_lab_number" />

                <EditText
                    android:id="@+id/edit_text_lab_question"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:hint="@string/_1_6"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:textCursorDrawable="@null"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="@+id/text_lab_question"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/text_lab_question"
                    app:layout_constraintTop_toTopOf="@+id/text_lab_question" />

                <EditText
                    android:id="@+id/edit_text_lab_main_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@null"
                    android:hint="@string/start_typing"
                    android:inputType="textCapSentences"
                    android:minHeight="48dp"
                    android:textCursorDrawable="@null"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_lab_question" />

                <!--                <androidx.constraintlayout.widget.ConstraintLayout-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="match_parent">-->

                <!--                    <ImageButton-->
                <!--                        android:id="@+id/buttonTable"-->
                <!--                        android:layout_width="wrap_content"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:layout_marginEnd="16dp"-->
                <!--                        android:src="@drawable/outline_table_chart_24"-->
                <!--                        app:layout_constraintEnd_toStartOf="@+id/buttonPhoto"-->
                <!--                        app:layout_constraintTop_toBottomOf="@+id/buttonPhoto"/>-->

                <!--                    <ImageButton-->
                <!--                        android:id="@+id/buttonPhoto"-->
                <!--                        android:layout_width="wrap_content"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:layout_marginEnd="16dp"-->
                <!--                        android:src="@drawable/outline_photo_camera_24"-->
                <!--                        app:layout_constraintEnd_toEndOf="parent"-->
                <!--                        app:layout_constraintTop_toBottomOf="parent"/>-->
                <!--                </androidx.constraintlayout.widget.ConstraintLayout>-->
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>